Closed Bug 242985 Opened 22 years ago Closed 22 years ago

Define module for IPC specific error codes

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

Attachments

(1 file)

Define module for IPC specific error codes.
Attached patch v1 patchSplinter Review
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.8alpha
Attachment #147948 - Flags: review?(dougt)
Attachment #147948 - Flags: review?(dougt) → review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: