fixes bug 242985 "Define module for IPC specific error codes" r/moa=dougt